--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "bootstrap": "^4.1.3",
     "enzyme": "^3.4.1",
     "enzyme-adapter-react-16": "^1.2.0",
+    "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-sparklines": "^1.7.0",
     "reactstrap": "^6.3.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
